@@ -4,20 +4,18 @@ Hash: SHA512
 AUX s3backer-qa.patch 1749 RMD160 a4e7c772d174794a8d0f5278b955a2979b6e06c8 SHA1 7b872b3d11dcf239d983e9641d6e920b2e5638bb SHA256 de17836aa493e89cbc711af06f4bd9f507595f77c1709a98d303b8eb3682cac6
 DIST s3backer-1.2.2.tar.gz 142054 RMD160 14c98c10b841015fc874147128fcb7b8d76e2abf SHA1 9a2b2e068ea0aff3b4cc16bc6b218a2938ea456f SHA256 8678c69458a09f5f091c8573f6940639f94b928fe30d2861c08768a48bbfec1c
 DIST s3backer-1.3.2.tar.gz 171027 RMD160 8857b54abe6086937de7a27431b98fd3b65603dd SHA1 badc003ffb0830a3fa59c9f39f13ad94729cbcf1 SHA256 ab4bd0c900d24fa3ba6f2004cd88f58a952c1b1d0e50e4380fbe86129ae6a6bc
-EBUILD s3backer-1.2.2-r1.ebuild 841 RMD160 0da307e392bd33e6a76998ba5ab763f724d32a49 SHA1 55c01adede2d7818a45c5eb1c38fd7a60a631016 SHA256 10036d572145baf54f34067fc39aaf1ada285d030f035fcf8dec0135874d0455
 EBUILD s3backer-1.2.2-r2.ebuild 945 RMD160 809a124a411faabd3f257cc50a359336107ba0cb SHA1 79d04183c016a8c3debcf59f16fed8298adc514b SHA256 ff1d2b0aeec5b5b66868383b7ff0ea94cffe205e58f00976de1f3f85b232428a
-EBUILD s3backer-1.2.2.ebuild 761 RMD160 cb30b74e6a17b1dd0f1f8532614ea2d43f774725 SHA1 2672cd385f41a4442dc69d3e39241df3ccfe87e7 SHA256 ba1889ce92c049ce297fcc3c45e8d940e131c5904096298f90b4d8a590414d8a
 EBUILD s3backer-1.3.2.ebuild 769 RMD160 512cb572899c712b739863bbf8ae5a18558af453 SHA1 7b51ec07609f6328b9db812e97bf615559647f3a SHA256 50c07418ae5420a3c19c62ae06fa6406f9b5d669f91babf2e7a0b0b8a031bdb0
-MISC ChangeLog 945 RMD160 761848c2911f9241a5118138dbf1986fd40d94d2 SHA1 04d1594b616c4ded962817e2b505908e4081d919 SHA256 8afff7ce4d061823d22371e0a9390303a9e9f72d6adf02dc48838789877b4478
+MISC ChangeLog 1062 RMD160 2f6975bdabd6c4d30af7d21a11c1c2b0b53e150e SHA1 8d87bcfd0e38bade3896a737a00554838882fcb5 SHA256 8206c462d6c3947f265198d5e2a66e753b731000c34399b6ab1c9d6c44bb101b
 MISC metadata.xml 254 RMD160 161337e6910a0fd0b752294ab4aa7640c7c2aad6 SHA1 e1d817485dd8943fcb7bfefec4ccff1d56e5b2f7 SHA256 27ec031bea6f122f30a7a6ce887a0174396b7aa96aa28472472ac67b2b24078b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJOXcdyAAoJEEqz6FtPBkyj0bwH/2h5t12a+5AFZJGH88k3x41n
-V6LaZImqJNnL7hbg8Jijrsxziur4Jt3oWtsFOL5Y+3PP3nMbK442YMp+9dVx9FAl
-qfeH1jm1KRbd8T3d+T9WE5aACa/65ZD6qN5sQso14xeyD+swdgrztQ4GAksx5G7G
-RROm/zSbF3bDBfNOyP9xIiRF7M3pW4RTy526DdcAooGAJaZnXAwv8ccZRMDITjW8
-BHdqSiGFz9E1VCXApwVRRfvh3gWIQHWOIJ1aa2aZaEhXaU9WLbcTPDs0PDZoEoPs
-0MPXI5QgScDfQVHbYRBDSOh8y2mlc3gyUiD3egFaKu2Ar1AirXtNJ2loeA7podk=
-=X7r2
+iQEcBAEBCgAGBQJOXcjlAAoJEEqz6FtPBkyjVP0H/24thGXNsbyFysatsCMXr9hh
+Zs7JNCpYsIcDqmmXxKPacavqTWYPgRutzmAQA9Rq8L4JiIiJh19oLbdLO2LNat1P
+QBNOx1qvPFC/L48xW9407SnX/ZkUhg33CIxI7yC2BW7yY6gb2hvNh6I4kFgh8LtU
+uI+pgL1hjOBiwv5QwEQtvFAbwsQA6XL3bq13QCqFoJeKKgOAe5rTv3zxSttfBnAk
+6rDE91GI37CQWWRZps7GOisxyMF9XpfnLY88gPJhH89AWXQQM7555TbhXeAI/afN
+t28VaZ9dZIalY0T77GeQXvovCeUCiMlF+b8828tzBnBNNalTSfSx0kvTnNkvnic=
+=5wmi
 -----END PGP SIGNATURE-----
