@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/s3backer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/s3backer/ChangeLog,v 1.5 2011/08/31 05:32:28 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/s3backer/ChangeLog,v 1.6 2011/08/31 05:38:39 radhermit Exp $
+
+  31 Aug 2011; Tim Harder <radhermit@gentoo.org> -s3backer-1.2.2.ebuild,
+  -s3backer-1.2.2-r1.ebuild:
+  Remove old.
 
 *s3backer-1.3.2 (31 Aug 2011)
 
